<resources>
    <string name="app_name">Simaster Presensi</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login">Login</string>
    <string name="dec_login">Silahkan login dengan akun UGM</string>
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="title_scan_qr">Scan QR</string>
    <string name="title_presensi_scan_qr">Presensi Scan QR</string>
    <string name="title_null">Null</string>
    <string name="dec_main">Silahkan gunakan aplikasi ini dengan bijak</string>
    <string name="title_pilih_file">Pilih File</string>
    <string name="dec_pilih_file">Pilih file dari galeri</string>
    <string name="scan_qr_code">Presensi QR Code</string>
    <string name="title_presensi_kkn">Presensi KKN</string>
    <string name="title_start_service">Start Service</string>
    <string name="title_kill_service">Kill Service</string>
    <string name="title_presensi_sekarang">Presensi Sekarang</string>
    <string name="title_fake_latitute">Fake Latitute</string>
    <string name="title_fake_longtitute">Fake Longtitute</string>
    <string name="title_save_current_location">Save current location to fake long lat</string>
    <string name="title_save_fake_location">Save Fake Location</string>
</resources>